for make pdf file link and insert to tag postingintro.html revised so former postringintro.html file renamed as postingintro_save.html

--- a/views/postingintro_save.html
+++ b/views/postingintro_save.html
@@ -859,6 +859,18 @@
             </label>
         </label>
 
+        <input type="checkbox" id="category23">
+        <label for="category23" class="categorylabel">
+            <h3><a href="#">프로그래밍으로만드는블로그(3)<span style="font-size:1px;">오른쪽클릭</span></a></h3><em></em>
+            <span class="arrowicon"></span>
+        </label>
+
+        <input type="checkbox" id="category24">
+        <label for="category24" class="categorylabel">
+            <h3><a href="#">시스템프로그래밍(3)<span style="font-size:1px;">오른쪽클릭</span></a></h3><em></em>
+            <span class="arrowicon"></span>
+        </label>
+
         <label id="testbox"><h3>Python(8)<span style="font-size:1px;color: #5f5f5f;"> 여기클릭</span></h3>
             <span class="arrowicon"></span>
             <input type="checkbox">
@@ -1012,7 +1024,7 @@
 
         <input type="checkbox" id="category17">
         <label for="category17" class="categorylabel">
-            <h3><a href="#">C언어(4)<span style="font-size:1px;">오른쪽클릭</span></a></h3><em></em>
+            <h3><a href="#">C언어(2)<span style="font-size:1px;">오른쪽클릭</span></a></h3><em></em>
             <span class="arrowicon"></span>
         </label>
 
