show1day1proj.html rm and newly added detail revised

--- a/views/show1day1proj.html
+++ b/views/show1day1proj.html
@@ -302,6 +302,26 @@
         .section input[id="slide23"]:checked ~ .slidewrap .slidelist > li{
             transform:translateX(-200%);
         }
+        #testbox input+h2{
+            margin-left:15px;
+            font-size:15px;
+            left:15px;
+        }
+        a{
+            text-decoration: none;
+            color:#5f5f5f;
+        }
+        h3{
+            color:#595959;
+        }
+        .conbox.con4>#testbox>#subtestbox>span.text>a>img{
+            position:relative;
+            width:17px;
+            height:17px;
+            border:1px solid #c8ccd4;
+            border-radius: 3px;
+            transition:background 0.1s ease;
+        }
         @keyframes jelly{
             from {transform:scale(1,1);}
             30%{
@@ -390,7 +410,9 @@
         }
         #testbox input+h2{
             position: relative;
-
+            margin-left:15px;
+            font-size:15px;
+            left:15px;
         }
         #testbox input+h2+.icon{
             position:absolute;
